[package]
name = "hole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["server"]
peer = []
server = []

[dependencies]
bytes = "1.4.0"
dotenv = "0.15.0"
futures-util = "0.3.28"
http = "0.2.9"
serde = "1.0.164"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = "0.7.8"
tokio-websockets = "0.3.3"
trust-dns-resolver = "0.22.0"
